--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dependencies": {
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
-        "grunt-contrib-sass": "0.7.3",
+        "grunt-contrib-stylus": "0.18.0",
         "grunt-contrib-handlebars": "0.8.0",
         "bower": "1.3.8",
         "express": "4.7.2"
