--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     },
     "main": "web.js",
     "dependencies": {
+        "bower": "1.3.8",
+        "express": "4.7.2",
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
-        "grunt-contrib-stylus": "0.18.0",
         "grunt-contrib-handlebars": "0.8.0",
-        "bower": "1.3.8",
-        "express": "4.7.2"
+        "grunt-contrib-stylus": "0.18.0"
     },
     "devDependencies": {
         "grunt-contrib-watch": "0.6.1",
