--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "bower": "1.3.8",
         "express": "4.7.2",
+        "express-hbs": "0.7.10",
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-handlebars": "0.8.0",
