--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-handlebars": "0.8.0",
-        "grunt-contrib-stylus": "0.18.0"
+        "grunt-contrib-stylus": "0.18.0",
+        "grunt-jslint": "1.1.12"
     },
     "devDependencies": {
         "grunt-contrib-watch": "0.6.1",
