--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-handlebars": "0.8.0",
+        "grunt-contrib-jasmine": "0.7.0",
         "grunt-contrib-stylus": "0.18.0",
         "grunt-jslint": "1.1.12"
     },
@@ -19,6 +20,7 @@
         "grunt-notify": "0.3.0"
     },
     "scripts": {
-        "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default"
+        "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default",
+        "test": "grunt test"
     }
 }
