--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "name": "nodejs-starter-kit",
+    "version": "0.0.1",
+    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through Stylus), and RequireJS. Client-side dependency management is through Bower.",
     "engines": {
         "node": "0.10.x"
     },
@@ -22,5 +24,9 @@
     "scripts": {
         "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default",
         "test": "grunt test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/neogeek/nodejs-starter-kit.git"
     }
 }
