--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
     "name": "nodejs-starter-kit",
     "version": "0.0.1",
     "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through Stylus), and RequireJS. Client-side dependency management is through Bower.",
+    "license": "MIT",
     "dependencies": {
         "jquery": "2.1.1",
         "handlebars": "1.3.0",
