--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "node": "0.10.x"
     },
     "main": "web.js",
+    "license": "MIT",
     "dependencies": {
         "bower": "1.3.8",
         "express": "4.7.2",
