--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "main": "web.js",
     "license": "MIT",
     "dependencies": {
-        "bower": "1.3.8",
-        "express": "4.7.2",
+        "bower": "1.3.9",
+        "express": "4.8.2",
         "express-hbs": "0.7.10",
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
@@ -20,12 +20,22 @@
     },
     "devDependencies": {
         "grunt-contrib-watch": "0.6.1",
-        "grunt-notify": "0.3.0"
+        "grunt-notify": "0.3.1"
     },
     "scripts": {
         "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default",
         "test": "grunt test"
     },
+    "keywords": [
+        "node",
+        "bower",
+        "express",
+        "grunt",
+        "handlebars",
+        "jasmine",
+        "stylus",
+        "jslint"
+    ],
     "repository": {
         "type": "git",
         "url": "git://github.com/neogeek/nodejs-starter-kit.git"
