Updated description to be less than 140 char.

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "nodejs-starter-kit",
     "version": "0.0.1",
-    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through Stylus), and RequireJS. Client-side dependency management is through Bower.",
+    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through Stylus), and RequireJS.",
     "license": "MIT",
     "dependencies": {
         "jquery": "2.1.1",
