--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Node.js Starter Kit",
-    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through Stylus), and RequireJS. Client-side dependency management is through Bower.",
+    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through Stylus), and RequireJS.",
     "repository": "https://github.com/neogeek/nodejs-starter-kit",
     "keywords": [
         "node",
