--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "main": "web.js",
     "license": "MIT",
     "dependencies": {
-        "bower": "1.3.9",
-        "express": "4.8.5",
+        "bower": "1.3.10",
+        "express": "4.9.0",
         "express-hbs": "0.7.11",
+        "express-enrouten": "1.1.1",
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-handlebars": "0.8.0",
         "grunt-contrib-jasmine": "0.7.0",
-        "grunt-contrib-stylus": "0.18.0",
+        "grunt-contrib-stylus": "0.19.0",
         "grunt-jslint": "1.1.12"
     },
     "devDependencies": {
