--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nodejs-starter-kit",
     "version": "0.0.1",
-    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through Stylus), and RequireJS.",
+    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS.",
     "engines": {
         "node": "0.10.x"
     },
