--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "license": "MIT",
     "dependencies": {
         "bower": "1.3.12",
-        "express": "4.9.8",
+        "express": "4.10.1",
         "express-enrouten": "1.1.1",
         "express-hbs": "0.7.11",
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-handlebars": "0.9.0",
-        "grunt-contrib-jasmine": "0.8.0",
+        "grunt-contrib-jasmine": "0.8.1",
         "grunt-jslint": "1.1.12",
         "grunt-sass": "0.16.0"
     },
@@ -40,5 +40,6 @@
     "repository": {
         "type": "git",
         "url": "git://github.com/neogeek/nodejs-starter-kit.git"
-    }
+    },
+    "private": true
 }
