--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "license": "MIT",
     "dependencies": {
         "bower": "1.3.12",
-        "express": "4.10.1",
+        "express": "4.10.2",
         "express-enrouten": "1.1.1",
         "express-hbs": "0.7.11",
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
-        "grunt-contrib-handlebars": "0.9.0",
+        "grunt-contrib-handlebars": "0.9.1",
         "grunt-contrib-jasmine": "0.8.1",
         "grunt-jslint": "1.1.12",
-        "grunt-sass": "0.16.0"
+        "grunt-sass": "0.16.1"
     },
     "devDependencies": {
         "grunt-contrib-watch": "0.6.1",
-        "grunt-notify": "0.3.1"
+        "grunt-notify": "0.4.1"
     },
     "scripts": {
         "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default",
@@ -34,7 +34,7 @@
         "grunt",
         "handlebars",
         "jasmine",
-        "stylus",
+        "sass",
         "jslint"
     ],
     "repository": {
