--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "express": "4.10.6",
         "express-enrouten": "1.2.0",
         "express-hbs": "0.7.11",
+        "express-session": "1.9.3",
+        "body-parser": "1.10.0",
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-handlebars": "0.9.2",
