--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-    "name": "nodejs-starter-kit",
-    "version": "0.0.1",
-    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS.",
-    "engines": {
-        "node": "0.10.x"
-    },
-    "main": "web.js",
-    "license": "MIT",
-    "dependencies": {
-        "bower": "1.3.12",
-        "express": "4.10.6",
-        "express-enrouten": "1.2.0",
-        "express-hbs": "0.7.11",
-        "express-session": "1.9.3",
-        "body-parser": "1.10.0",
-        "grunt": "0.4.5",
-        "grunt-cli": "0.1.13",
-        "grunt-contrib-handlebars": "0.9.2",
-        "grunt-contrib-jasmine": "0.8.1",
-        "grunt-jslint": "1.1.12",
-        "grunt-sass": "0.17.0"
-    },
-    "devDependencies": {
-        "grunt-contrib-watch": "0.6.1",
-        "grunt-notify": "0.4.1"
-    },
-    "scripts": {
-        "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default",
-        "test": "grunt test"
-    },
-    "keywords": [
-        "node",
-        "bower",
-        "express",
-        "grunt",
-        "handlebars",
-        "jasmine",
-        "sass",
-        "jslint"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/neogeek/nodejs-starter-kit.git"
-    },
-    "private": true
+  "name": "nodejs-starter-kit",
+  "version": "0.0.1",
+  "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS.",
+  "engines": {
+    "node": "0.10.x"
+  },
+  "main": "web.js",
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "1.10.0",
+    "bower": "1.3.12",
+    "express": "4.10.6",
+    "express-enrouten": "1.2.0",
+    "express-hbs": "0.7.11",
+    "express-session": "1.9.3",
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-handlebars": "0.9.2",
+    "grunt-contrib-jasmine": "0.8.1",
+    "grunt-jslint": "1.1.12",
+    "grunt-sass": "^0.17.0"
+  },
+  "devDependencies": {
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-notify": "0.4.1"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default",
+    "test": "grunt test"
+  },
+  "keywords": [
+    "node",
+    "bower",
+    "express",
+    "grunt",
+    "handlebars",
+    "jasmine",
+    "sass",
+    "jslint"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/neogeek/nodejs-starter-kit.git"
+  },
+  "private": true
 }
