--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "web.js",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "1.10.0",
+    "body-parser": "1.10.1",
     "bower": "1.3.12",
     "express": "4.10.6",
     "express-enrouten": "1.2.0",
@@ -19,7 +19,7 @@
     "grunt-contrib-handlebars": "0.9.2",
     "grunt-contrib-jasmine": "0.8.1",
     "grunt-jslint": "1.1.12",
-    "grunt-sass": "^0.17.0"
+    "grunt-sass": "0.17.0"
   },
   "devDependencies": {
     "grunt-contrib-watch": "0.6.1",
