--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-contrib-handlebars": "0.9.2",
     "grunt-contrib-jasmine": "0.8.2",
     "grunt-jslint": "1.1.12",
-    "grunt-sass": "0.17.0"
+    "grunt-sass": "0.17.0",
+    "nodemon": "1.2.1"
   },
   "devDependencies": {
     "grunt-contrib-watch": "0.6.1",
