--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "grunt-cli": "0.1.13",
     "grunt-contrib-handlebars": "0.9.2",
     "grunt-contrib-jasmine": "0.8.2",
-    "grunt-jslint": "1.1.12",
+    "grunt-contrib-jshint": "0.11.0",
     "grunt-sass": "0.17.0",
     "nodemon": "1.2.1"
   },
@@ -38,7 +38,7 @@
     "handlebars",
     "jasmine",
     "sass",
-    "jslint"
+    "jshint"
   ],
   "repository": {
     "type": "git",
