--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
   "main": "web.js",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "1.10.1",
+    "body-parser": "1.11.0",
     "bower": "1.3.12",
-    "express": "4.10.8",
+    "express": "4.11.2",
     "express-enrouten": "1.2.0",
     "express-hbs": "0.7.11",
-    "express-session": "1.10.1",
+    "express-session": "1.10.2",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
-    "grunt-contrib-handlebars": "0.9.2",
+    "grunt-contrib-handlebars": "0.9.3",
     "grunt-contrib-jasmine": "0.8.2",
     "grunt-contrib-jshint": "0.11.0",
-    "grunt-sass": "0.17.0",
-    "nodemon": "1.2.1"
+    "grunt-sass": "0.17.0"
   },
   "devDependencies": {
     "grunt-contrib-watch": "0.6.1",
