--- a/.jshintrc
+++ b/.jshintrc
@@ -1,21 +1,23 @@
 {
-    "bitwise": true,
-    "curly": true,
-    "eqeqeq": true,
-    "forin": true,
-    "freeze": true,
-    "globals": {
-        "define": true,
-        "module": true,
-        "require": true
-    },
-    "immed": true,
-    "indent": 4,
-    "latedef": true,
-    "noarg": true,
-    "node": true,
-    "noempty": true,
-    "plusplus": true,
-    "quotmark": "single",
-    "undef": true
+  "bitwise": true,
+  "browser": true,
+  "curly": true,
+  "eqeqeq": true,
+  "forin": true,
+  "freeze": true,
+  "globals": {
+    "define": true,
+    "module": true,
+    "require": true
+  },
+  "immed": true,
+  "indent": 4,
+  "latedef": true,
+  "mocha": true,
+  "noarg": true,
+  "node": true,
+  "noempty": true,
+  "plusplus": true,
+  "quotmark": "single",
+  "undef": true
 }
