--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-contrib-handlebars": "0.10.2",
     "grunt-contrib-jasmine": "0.8.2",
     "grunt-contrib-jshint": "0.11.2",
-    "grunt-sass": "1.0.0"
+    "grunt-sass": "1.0.0",
+    "load-grunt-tasks": "3.2.0"
   },
   "devDependencies": {
     "grunt-contrib-watch": "0.6.1",
