--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
     "grunt-contrib-handlebars": "0.10.2",
-    "grunt-contrib-jasmine": "0.8.2",
     "grunt-contrib-jshint": "0.11.2",
     "grunt-sass": "1.0.0",
     "load-grunt-tasks": "3.2.0"
   },
   "devDependencies": {
     "grunt-contrib-watch": "0.6.1",
-    "grunt-notify": "0.4.1"
+    "grunt-notify": "0.4.1",
+    "mocha": "2.2.5"
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default",
