--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "1.13.3",
     "bower": "1.4.1",
+    "compression": "1.5.2",
     "express": "4.13.3",
     "express-enrouten": "1.2.1",
     "express-hbs": "0.8.4",
