--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "grunt-contrib-handlebars": "0.10.2",
     "grunt-contrib-jshint": "0.11.2",
     "grunt-sass": "1.0.0",
-    "load-grunt-tasks": "3.2.0"
+    "load-grunt-tasks": "3.2.0",
+    "requirejs": "2.1.20"
   },
   "devDependencies": {
     "grunt-contrib-watch": "0.6.1",
     "mocha": "2.2.5"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default",
+    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default && make requirejs",
     "test": "make test"
   },
   "keywords": [
