--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "requirejs": "2.1.20"
   },
   "devDependencies": {
+    "chai": "3.3.0",
     "grunt-contrib-watch": "0.6.1",
     "mocha": "2.3.3"
   },
