--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "devDependencies": {
     "chai": "3.3.0",
     "grunt-contrib-watch": "0.6.1",
-    "mocha": "2.3.3"
+    "jscover": "1.0.0",
+    "mocha": "2.3.3",
+    "mocha-reporter-cov-summary": "0.1.1"
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default && make requirejs",
