--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - "0.12"
-  - "4.4"
-  - "5.8"
+  - "4.0"
+  - "5.0"
 before_install:
+  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
   - npm install -g grunt-cli
 sudo: false
