--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "express-hbs": "1.0.1",
     "express-session": "1.13.0",
     "grunt": "1.0.1",
-    "grunt-cli": "1.2.0",
     "grunt-contrib-handlebars": "1.0.0",
-    "grunt-contrib-jshint": "1.0.0",
     "grunt-sass": "1.2.0",
     "i18n": "0.8.2",
     "load-grunt-tasks": "3.5.0",
@@ -27,6 +25,7 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
+    "eslint": "2.10.2",
     "grunt-contrib-watch": "1.0.0",
     "jscover": "1.0.0",
     "mocha": "2.5.3",
@@ -45,7 +44,7 @@
     "handlebars",
     "jasmine",
     "sass",
-    "jshint"
+    "eslint"
   ],
   "repository": {
     "type": "git",
