--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mocha-reporter-cov-summary": "0.1.1"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt default && make requirejs",
+    "postinstall": "./node_modules/.bin/bower install && ./node_modules/.bin/grunt default && make requirejs",
     "start": "node web.js",
     "test": "make test"
   },
