--- a/.eslintrc
+++ b/.eslintrc
@@ -11,12 +11,7 @@
     "es6": true
   },
   "extends": [
-    "eslint:recommended",
-    "./config/eslint-coding-standards/.eslintrc-best-practice",
-    "./config/eslint-coding-standards/.eslintrc-es6",
-    "./config/eslint-coding-standards/.eslintrc-nodejs-commonjs",
-    "./config/eslint-coding-standards/.eslintrc-stylistic",
-    "./config/eslint-coding-standards/.eslintrc-variables"
+    "@neogeek/eslint-config-standards"
   ],
   "rules": {
     "valid-jsdoc": 2,
