--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "requirejs": "2.2.0"
   },
   "devDependencies": {
+    "@neogeek/eslint-config-standards": "1.1.0",
     "chai": "3.5.0",
-    "eslint": "2.10.2",
+    "eslint": "3.4.0",
     "grunt-contrib-watch": "1.0.0",
     "jscover": "1.0.0",
     "mocha": "2.5.3",
