--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ node_modules/
 static/bower_components/
 
 static/css/styles.css
-static/js/build.min.js
-static/templates/compiled.js
+static/build.min.js
+static/build.min.js.map
+static/templates/compiled.min.js
 
 coverage.html
 
