--- a/package.json
+++ b/package.json
@@ -17,16 +17,15 @@
     "express-session": "1.14.1",
     "grunt": "1.0.1",
     "grunt-contrib-handlebars": "1.0.0",
-    "grunt-sass": "1.2.1",
     "i18n": "0.8.3",
     "load-grunt-tasks": "3.5.2",
+    "node-sass": "3.8.0",
     "spire-of-babel": "1.1.6"
   },
   "devDependencies": {
     "@neogeek/eslint-config-standards": "1.1.0",
     "chai": "3.5.0",
     "eslint": "3.4.0",
-    "grunt-contrib-watch": "1.0.0",
     "jscover": "1.0.0",
     "mocha": "3.0.2",
     "mocha-reporter-cov-summary": "0.1.1"
