--- a/app.json
+++ b/app.json
@@ -1,14 +1,13 @@
 {
   "name": "Node.js Starter Kit",
-  "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS.",
+  "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and Babel (through spire-of-babel).",
   "repository": "https://github.com/neogeek/nodejs-starter-kit",
   "keywords": [
     "node",
-    "bower",
+    "babel",
     "express",
-    "grunt",
     "handlebars",
-    "jasmine",
+    "mocha",
     "sass",
     "eslint"
   ]
