--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@neogeek/eslint-config-standards": "1.1.0",
     "chai": "3.5.0",
+    "concurrently": "^2.2.0",
     "eslint": "3.4.0",
     "jscover": "1.0.0",
     "mocha": "3.0.2",
