--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "site_name": "Node.js Starter Kit",
-    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS."
+    "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and Babel (through spire-of-babel)."
 }
