--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,21 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
   "env": {
-    "node": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
   "extends": [
     "@neogeek/eslint-config-standards"
   ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 6,
+    "sourceType": "module"
+  },
   "rules": {
-    "valid-jsdoc": 2,
-    "no-underscore-dangle": 0
+    "id-length": 0,
+    "no-underscore-dangle": 0,
+    "valid-jsdoc": 2
   }
 }
