--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -4,10 +4,10 @@
     "it": true
   },
   "rules": {
-    "require-jsdoc": 0,
+    "max-len": 0,
+    "max-statements": 0,
     "no-console": 0,
     "no-magic-numbers": 0,
-    "max-statements": 0,
-    "max-len": 0
+    "require-jsdoc": 0
   }
 }
