--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "handlebars": "4.0.5",
     "i18n": "0.8.3",
     "node-sass": "3.9.3",
-    "spire-of-babel": "1.1.6"
+    "spire-of-babel": "1.1.7"
   },
   "devDependencies": {
     "@neogeek/eslint-config-standards": "1.2.0",
     "chai": "3.5.0",
-    "concurrently": "^2.2.0",
+    "concurrently": "2.2.0",
     "eslint": "3.4.0",
     "jscover": "1.0.0",
     "mocha": "3.0.2",
