--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -7,7 +7,6 @@
     "max-len": 0,
     "max-statements": 0,
     "no-console": 0,
-    "no-magic-numbers": 0,
-    "require-jsdoc": 0
+    "no-magic-numbers": 0
   }
 }
