--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jscover": "1.0.0",
     "mocha": "3.0.2",
     "mocha-reporter-cov-summary": "0.1.1",
+    "nodemon": "1.10.2",
     "onchange": "3.0.0"
   },
   "scripts": {
