--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@neogeek/eslint-config-standards": "1.2.0",
     "concurrently": "2.2.0",
     "eslint": "3.4.0",
-    "jscover": "1.0.0",
+    "istanbul": "0.4.5",
     "mocha": "3.0.2",
     "mocha-reporter-cov-summary": "0.1.1",
     "nodemon": "1.10.2",
