Moved eslint rules into config.

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,8 @@
   ],
   "rules": {
     "id-length": 0,
-    "no-underscore-dangle": 0
+    "max-params": 0,
+    "no-underscore-dangle": 0,
+    "no-unused-vars": [2, {"args": "none"}]
   }
 }
