--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@neogeek/nodejs-starter-kit",
   "version": "0.0.1",
-  "description": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and Babel (through spire-of-babel).",
+  "description": "This repo is a starter kit for working with Node.js, Handlebars, Sass, and Babel.",
   "engines": {
     "node": "6.x"
   },
