--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,12 +1,5 @@
 {
-  "globals": {
-    "describe": true,
-    "it": true
-  },
-  "rules": {
-    "max-len": 0,
-    "max-statements": 0,
-    "no-console": 0,
-    "no-magic-numbers": 0
-  }
+  "extends": [
+    "@neogeek/eslint-config-standards/.eslintrc-tests"
+  ]
 }
