--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "spire-of-babel": "1.4.0"
   },
   "devDependencies": {
-    "@neogeek/eslint-config-standards": "^2.0.0",
     "concurrently": "^3.4.0",
-    "eslint": "^4.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "nodemon": "^1.11.0",
@@ -40,8 +38,7 @@
     "express",
     "handlebars",
     "mocha",
-    "sass",
-    "eslint"
+    "sass"
   ],
   "repository": {
     "type": "git",
