--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "spire-of-babel": "1.4.0"
   },
   "devDependencies": {
+    "codecov": "3.7.2",
     "concurrently": "^3.4.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
+    "jest": "26.4.2",
     "nodemon": "^1.11.0",
     "onchange": "^4.0.0"
   },
   "scripts": {
     "postinstall": "make build",
     "start": "node web.js",
-    "test": "make test"
+    "coverage": "jest --coverage --verbose=true",
+    "test": "jest --verbose=true"
   },
   "keywords": [
     "node",
