--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
   "main": "web.js",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "1.18.3",
-    "compression": "1.7.2",
-    "cors": "2.8.4",
-    "express": "4.16.3",
+    "body-parser": "1.19.0",
+    "compression": "1.7.4",
+    "cors": "2.8.5",
+    "express": "4.17.1",
     "express-enrouten": "1.3.0",
-    "express-hbs": "1.0.4",
-    "express-session": "1.15.6",
-    "handlebars": "4.0.11",
-    "i18n": "0.8.3",
-    "node-sass": "4.9.0",
-    "spire-of-babel": "1.4.0"
+    "express-hbs": "2.3.4",
+    "express-session": "1.17.1",
+    "handlebars": "4.7.6",
+    "i18n": "0.13.2",
+    "node-sass": "4.14.1",
+    "spire-of-babel": "2.0.1"
   },
   "devDependencies": {
     "codecov": "3.7.2",
-    "concurrently": "^3.4.0",
+    "concurrently": "5.3.0",
     "jest": "26.4.2",
-    "nodemon": "^1.11.0",
-    "onchange": "^4.0.0"
+    "nodemon": "2.0.4",
+    "onchange": "7.0.2"
   },
   "scripts": {
     "postinstall": "make build",
